--- a/environment.yml
+++ b/environment.yml
@@ -1,76 +1,125 @@
-name: base
+name: /Users/jp/micromamba/envs/disres
 channels:
+  - pytorch
   - conda-forge
 dependencies:
-  - archspec=0.2.3=pyhd8ed1ab_0
-  - boltons=24.0.0=pyhd8ed1ab_0
-  - brotli-python=1.1.0=py310h1253130_1
-  - bzip2=1.0.8=h93a5062_5
-  - c-ares=1.28.1=h93a5062_0
-  - ca-certificates=2024.2.2=hf0a4a13_0
-  - certifi=2024.2.2=pyhd8ed1ab_0
-  - cffi=1.16.0=py310hdcd7c05_0
-  - charset-normalizer=3.3.2=pyhd8ed1ab_0
-  - colorama=0.4.6=pyhd8ed1ab_0
-  - conda=24.3.0=py310hbe9552e_0
-  - conda-libmamba-solver=24.1.0=pyhd8ed1ab_0
-  - conda-package-handling=2.2.0=pyh38be061_0
-  - conda-package-streaming=0.9.0=pyhd8ed1ab_0
-  - distro=1.9.0=pyhd8ed1ab_0
-  - fmt=10.2.1=h2ffa867_0
-  - icu=73.2=hc8870d7_0
-  - idna=3.6=pyhd8ed1ab_0
-  - jsonpatch=1.33=pyhd8ed1ab_0
-  - jsonpointer=2.4=py310hbe9552e_3
-  - krb5=1.21.2=h92f50d5_0
-  - libarchive=3.7.2=hcacb583_1
-  - libcurl=8.7.1=h2d989ff_0
-  - libcxx=16.0.6=h4653b0c_0
-  - libedit=3.1.20191231=hc8eb9b7_2
-  - libev=4.33=h93a5062_2
+  - brotli=1.1.0=hd74edd7_2
+  - brotli-bin=1.1.0=hd74edd7_2
+  - brotli-python=1.1.0=py311h3f08180_2
+  - bzip2=1.0.8=h99b78c6_7
+  - ca-certificates=2024.8.30=hf0a4a13_0
+  - certifi=2024.8.30=pyhd8ed1ab_0
+  - cffi=1.17.1=py311h3a79f62_0
+  - charset-normalizer=3.4.0=pyhd8ed1ab_0
+  - contourpy=1.3.1=py311h210dab8_0
+  - cpython=3.11.10=py311hd8ed1ab_3
+  - cycler=0.12.1=pyhd8ed1ab_0
+  - filelock=3.16.1=pyhd8ed1ab_0
+  - fonttools=4.54.1=py311h56c23cb_1
+  - freetype=2.12.1=hadb7bae_2
+  - giflib=5.2.2=h93a5062_0
+  - gmp=6.3.0=h7bae524_2
+  - gmpy2=2.1.5=py311hb5ce3a2_2
+  - h2=4.1.0=pyhd8ed1ab_0
+  - hpack=4.0.0=pyh9f0ad1d_0
+  - hyperframe=6.0.1=pyhd8ed1ab_0
+  - idna=3.10=pyhd8ed1ab_0
+  - jinja2=3.1.4=pyhd8ed1ab_0
+  - kiwisolver=1.4.7=py311h2c37856_0
+  - lcms2=2.16=ha0e7c42_0
+  - lerc=4.0.0=h9a09cb3_0
+  - libblas=3.9.0=19_osxarm64_openblas
+  - libbrotlicommon=1.1.0=hd74edd7_2
+  - libbrotlidec=1.1.0=hd74edd7_2
+  - libbrotlienc=1.1.0=hd74edd7_2
+  - libcblas=3.9.0=19_osxarm64_openblas
+  - libcxx=19.1.3=ha82da77_0
+  - libdeflate=1.22=hd74edd7_0
+  - libexpat=2.6.4=h286801f_0
   - libffi=3.4.2=h3422bc3_5
-  - libiconv=1.17=h0d3ecfb_2
-  - libmamba=1.5.8=h90c426b_0
-  - libmambapy=1.5.8=py310h5e0a2f6_0
-  - libnghttp2=1.58.0=ha4dd798_1
-  - libsolv=0.7.28=h1059232_2
-  - libsqlite=3.45.2=h091b4b1_0
-  - libssh2=1.11.0=h7a5bd25_0
-  - libxml2=2.12.6=h0d0cfa8_1
-  - libzlib=1.2.13=h53f4e23_5
-  - lz4-c=1.9.4=hb7217d7_0
-  - lzo=2.10=h642e427_1000
-  - mamba=1.5.8=py310ha5d4528_0
-  - menuinst=2.0.2=py310hbe9552e_0
-  - ncurses=6.4.20240210=h078ce10_0
-  - openssl=3.2.1=h0d3ecfb_1
-  - packaging=24.0=pyhd8ed1ab_0
-  - pip=24.0=pyhd8ed1ab_0
-  - platformdirs=4.2.0=pyhd8ed1ab_0
-  - pluggy=1.4.0=pyhd8ed1ab_0
-  - pybind11-abi=4=hd8ed1ab_3
-  - pycosat=0.6.6=py310h2aa6e3c_0
+  - libgfortran=5.0.0=13_2_0_hd922786_3
+  - libgfortran5=13.2.0=hf226fd6_3
+  - libjpeg-turbo=3.0.0=hb547adb_1
+  - liblapack=3.9.0=19_osxarm64_openblas
+  - libopenblas=0.3.24=openmp_hd76b1f2_0
+  - libpng=1.6.44=hc14010f_0
+  - libsqlite=3.47.0=hbaaea75_1
+  - libtiff=4.7.0=hfce79cd_1
+  - libwebp=1.4.0=h54798ee_0
+  - libwebp-base=1.4.0=h93a5062_0
+  - libxcb=1.17.0=hdb1d25a_0
+  - libzlib=1.3.1=h8359307_2
+  - llvm-openmp=15.0.7=h7cfbb63_0
+  - markupsafe=3.0.2=py311h56c23cb_0
+  - matplotlib=3.9.2=py311ha1ab1f8_2
+  - matplotlib-base=3.9.2=py311hbe3227e_2
+  - mpc=1.3.1=h8f1351a_1
+  - mpfr=4.2.1=hb693164_3
+  - mpmath=1.3.0=pyhd8ed1ab_0
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - ncurses=6.5=h7bae524_1
+  - networkx=3.4.2=pyh267e887_2
+  - numpy=2.1.3=py311h649a571_0
+  - openjpeg=2.5.2=h9f1df11_0
+  - openssl=3.4.0=h39f12f2_0
+  - packaging=24.2=pyhd8ed1ab_0
+  - pillow=11.0.0=py311h3894ae9_0
+  - pip=24.3.1=pyh8b19718_0
+  - pthread-stubs=0.4=hd74edd7_1002
   - pycparser=2.22=pyhd8ed1ab_0
+  - pyparsing=3.2.0=pyhd8ed1ab_1
   - pysocks=1.7.1=pyha2e5f31_6
-  - python=3.10.14=h2469fbe_0_cpython
-  - python_abi=3.10=4_cp310
+  - python=3.11.10=hc51fdd5_3_cpython
+  - python_abi=3.11=5_cp311
+  - pytorch=2.5.1=py3.11_0
+  - pyyaml=6.0.2=py311h460d6c5_1
+  - qhull=2020.2=h420ef59_5
   - readline=8.2=h92ec313_1
-  - reproc=14.2.4.post0=h93a5062_1
-  - reproc-cpp=14.2.4.post0=h965bd2d_1
-  - requests=2.31.0=pyhd8ed1ab_0
-  - ruamel.yaml=0.18.6=py310hd125d64_0
-  - ruamel.yaml.clib=0.2.8=py310hd125d64_0
-  - setuptools=69.5.1=pyhd8ed1ab_0
+  - requests=2.32.3=pyhd8ed1ab_0
+  - setuptools=75.3.0=pyhd8ed1ab_0
+  - six=1.16.0=pyh6c4a22f_0
   - tk=8.6.13=h5083fa2_1
-  - tqdm=4.66.2=pyhd8ed1ab_0
-  - truststore=0.8.0=pyhd8ed1ab_0
-  - tzdata=2024a=h0c530f3_0
-  - urllib3=2.2.1=pyhd8ed1ab_0
-  - wheel=0.43.0=pyhd8ed1ab_1
+  - tornado=6.4.1=py311h460d6c5_1
+  - typing_extensions=4.12.2=pyha770c72_0
+  - unicodedata2=15.1.0=py311hae2e1ce_1
+  - urllib3=2.2.3=pyhd8ed1ab_0
+  - wheel=0.45.0=pyhd8ed1ab_0
+  - xorg-libxau=1.0.11=hd74edd7_1
+  - xorg-libxdmcp=1.1.5=hd74edd7_0
   - xz=5.2.6=h57fd34a_0
-  - yaml-cpp=0.8.0=h13dd4ca_0
-  - zstandard=0.22.0=py310h6289e41_0
-  - zstd=1.5.5=h4f39d0f_0
+  - yaml=0.2.5=h3422bc3_2
+  - zstandard=0.23.0=py311ha60cc69_1
+  - zstd=1.5.6=hb46c0d2_0
   - pip:
+      - black==24.10.0
+      - click==8.1.7
+      - docker-pycreds==0.4.0
+      - fsspec==2024.10.0
+      - gitdb==4.0.11
+      - gitpython==3.1.43
+      - imageio==2.36.0
+      - lazy-loader==0.4
+      - mypy-extensions==1.0.0
+      - pandas==2.2.3
+      - pathspec==0.12.1
+      - platformdirs==4.3.6
+      - protobuf==5.28.3
+      - psutil==6.1.0
+      - python-dateutil==2.9.0.post0
+      - pytz==2024.2
+      - scikit-image==0.24.0
+      - scipy==1.14.1
+      - sentry-sdk==2.18.0
+      - setproctitle==1.3.3
+      - smmap==5.0.1
       - structlog==24.4.0
-prefix: /opt/homebrew/Caskroom/mambaforge/base
+      - sympy==1.13.1
+      - tifffile==2024.9.20
+      - torch==2.5.1
+      - torchaudio==2.5.1
+      - torchvision==0.20.1
+      - torchxrayvision==1.2.4
+      - tqdm==4.67.0
+      - tzdata==2024.2
+      - wandb==0.18.7
+prefix: /Users/jp/micromamba/envs/disres
