--- a/environment.yml
+++ b/environment.yml
@@ -49,6 +49,7 @@ dependencies:
   - libwebp-base=1.4.0=h93a5062_0
   - libxcb=1.17.0=hdb1d25a_0
   - libzlib=1.3.1=h8359307_2
+  - lightning-utilities=0.11.9=pyhff2d567_0
   - llvm-openmp=15.0.7=h7cfbb63_0
   - markupsafe=3.0.2=py311h56c23cb_0
   - matplotlib=3.9.2=py311ha1ab1f8_2
@@ -79,6 +80,7 @@ dependencies:
   - setuptools=75.3.0=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
   - tk=8.6.13=h5083fa2_1
+  - torchmetrics=1.5.2=pyhe5570ce_0
   - tornado=6.4.1=py311h460d6c5_1
   - typing_extensions=4.12.2=pyha770c72_0
   - unicodedata2=15.1.0=py311hae2e1ce_1
@@ -91,22 +93,33 @@ dependencies:
   - zstandard=0.23.0=py311ha60cc69_1
   - zstd=1.5.6=hb46c0d2_0
   - pip:
+      - absl-py==2.1.0
       - black==24.10.0
       - click==8.1.7
       - docker-pycreds==0.4.0
       - fsspec==2024.10.0
       - gitdb==4.0.11
       - gitpython==3.1.43
+      - h5py==3.12.1
       - imageio==2.36.0
+      - keras==3.6.0
       - lazy-loader==0.4
+      - markdown-it-py==3.0.0
+      - mdurl==0.1.2
+      - ml-dtypes==0.5.0
       - mypy-extensions==1.0.0
+      - namex==0.0.8
+      - optree==0.13.1
       - pandas==2.2.3
       - pathspec==0.12.1
       - platformdirs==4.3.6
       - protobuf==5.28.3
       - psutil==6.1.0
+      - pygments==2.18.0
       - python-dateutil==2.9.0.post0
       - pytz==2024.2
+      - resnet==0.1
+      - rich==13.9.4
       - scikit-image==0.24.0
       - scipy==1.14.1
       - sentry-sdk==2.18.0
